# ProofTraPar

./: Makefile  Makefile.in  NEWS  README  config.status  configure  configure.ac
BenchmarkComparison/Examples/LazyCSeqFormat/: _cs_dekker_true-unreach-call.c  _cs_lamport_true-unreach-call.c  _cs_peterson_true-unreach-call.c  (+6 more)
BenchmarkComparison/cream/: README
BenchmarkComparison/newseq-0.6c-svcomp2015/: ALL.spc  README.txt  README.txt~  _cs_lazy_unsafe.c  _cs_peterson.c  _cs_qrcu.c  common.py  constants.py  duplicator.py  errorlabel.py  extractor.py  inliner.py  labeler.py  lazy-cseq.OK.py  lazy-cseq.py  lazy_unsafe.c  merger.py  module.py  new-feeder.py  new-tester.py  new.py  parser.py  process.py  remover.py  script.sh  spinlook.py  switchconverter.py  threadexit.py  threadlocal.py  unroller.py  utils.py  varnames.py  workarounds.py
Examples/LazyCSeqFormat/: _cs_qrcu_false-unreach-call.c  _cs_qrcu_true-unreach-call.c  _cs_read_write_lock_false-unreach-call.c  _cs_read_write_lock_true-unreach-call.c  _cs_szymanski_true-unreach-call.c  _cs_time_var_mutex_true-unreach-call.c  peterson_true-unreach-call.strip.c  qrcu_false-unreach-call.strip.c  qrcu_true-unreach-call.strip.c  read_write_lock_false-unreach-call.strip.c
Examples/ProofTraParFormat/: qrcu.false.input  reader_writer_lock.safe.true.input
Examples/ThreaderFormat/: qrcu.false.c  qrcu.false.c.cc  qrcu.false.c.cc.qrcu_reader2.pl  read_write_lock.false.c  read_write_lock.false.c.cc.thr2.pl  read_write_lock.false.c~  read_write_lock.true.c.cc.thr1.pl  read_write_lock.true.c.cc.thr2.pl  read_write_lock.true.c.cc.thr3.pl  szymanski.c.cc  time_var_mutex.c.cc  time_var_mutex.c.cc.pl  time_var_mutex.c.cc.thr1.pl  time_var_mutex.c.cc.thr2.pl
augeas-1.4.0/src/: augrun.lo  internal.lo  jmt.lo  lens.lo  liblexer_la-lexer.lo  pathx.lo  put.lo
src/: DetermOriginal.dot  Makefile  Makefile.am  Makefile.in  Pass2.dot  ProofTraPar.cpp  RMMInterface.cpp  Test.cpp  a.cpp  backMake  dekker.true.input  fig_1_5.true.input.back  lamport.true.input  peterson.true.input  peterson.true.input.back  pgsql.true.input  qrcu.true.input  reader_writer_lock.safe.true.input  singleton.true.input  stack.safe.true.input  symzaski.safe.true.input  time_var_mutex.safe.true.input  try.cpp
src/.deps/: AFAGen.Po  AFAState.Po  AFAut.Po  PassFour.Po  PassFourAFA.Po  PassFourWeak.Po  PassThree.Po  PassTwo.Po  Process.Po  Program.Po  ProofAFA.Po  ProofTraPar.Po  QiParser.Po  SCTransSystem.Po  Test.Po  Z3ExpGen.Po
src/AFA/: AFAState.cpp  AFAState.h  AFAut.cpp  AFAut.h  PassFourAFA.cpp  PassFourWeak.cpp  PassThree.cpp  PassTwo.cpp
src/AFA/.deps/: AFAState.Po  AFAut.Po  PassFourAFA.Po  PassFourWeak.Po  PassThree.Po  PassTwo.Po
src/AFA/other/: AFAState.h  AFAut.cpp  PassFourAFA.cpp  PassFourWeak.cpp  PassThree.cpp
src/FenceFinder/: FenceFinder.cpp  FenceFinder.h
src/Parser/: Process.cpp  Process.h  Program.cpp  Program.h  QiParser.cpp  QiParser.h  QiParser.h.gch
src/Parser/.deps/: Process.Po  Program.Po  QiParser.Po
src/ProofAFA/: AFAGen.cpp  AFAGen.h
src/SCTransSystem/: SCTransSystem.cpp  SCTransSystem.h  SCTransSystem.h.gch
src/SCTransSystem/.deps/: SCTransSystem.Po
src/TSOTransSystem/: TSOState.cpp  TSOState.h  TSOTransSystem.cpp  TSOTransSystem.h
src/scratchpad/: Copy of Test.cpp  Makefile.am  Pass1.dot  ResultType.h  gviz.cpp  mod.pl  try.cpp
src/scratchpad/augeas-1.4.0/src/: augeas.lo  builtin.lo  fa.lo  ref.lo  syntax.lo
src/scratchpad/other/: Test.cpp
src/scratchpad/rmm/: dekker.aut.true  dekker.true.input  peterson.true.input
(+222 files in other folders)
